[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name = "example_package_kg573" 
dynamic = ["version"]
dependencies = ["numpy"]
readme="README.md"

[tool.hatch]
version.path = "src/example_package_kg573/__init__.py"


[project.optional-dependencies]
test = ["pytest"]